--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/navigationdrawer"
-
+    tools:openDrawer="start"
     tools:context=".activity.DashboardActivity"
     android:orientation="vertical">
 
@@ -223,7 +223,7 @@
                                 android:layout_width="0dp"
                                 android:layout_height="@dimen/_20sdp"
                                 android:layout_weight="1"
-                                android:src="@drawable/homedrawer" />
+                                android:src="@drawable/home" />
 
                             <TextView
                                 android:layout_width="0dp"
@@ -247,7 +247,7 @@
                                 android:layout_weight="1"
                                 android:layout_width="0dp"
                                 android:layout_height="@dimen/_20sdp"
-                                android:src="@drawable/calendardrawer"
+                                android:src="@drawable/bookingsgreen"
                                 />
 
                             <TextView
@@ -255,7 +255,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="@dimen/_5sdp"
                                 android:layout_weight="5"
-                                android:text="Calendar"
+                                android:text="Bookings"
                                 android:textColor="#212A3E"
                                 android:textSize="@dimen/_12sdp"
                                 android:textStyle="bold"
@@ -273,13 +273,13 @@
                                 android:layout_weight="1"
                                 android:layout_width="0dp"
                                 android:layout_height="@dimen/_20sdp"
-                                android:src="@drawable/optiondrawer"
+                                android:src="@drawable/favouritegreen"
                                 />
                             <TextView
                                 android:layout_weight="5"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="Add Category"
+                                android:text="Favourites"
                                 android:textSize="@dimen/_12sdp"
                                 android:textStyle="bold"
                                 android:textColor="#212A3E"
@@ -287,81 +287,9 @@
                                 />
 
                         </LinearLayout>
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:weightSum="6"
-                            android:layout_marginTop="@dimen/_15sdp"
-                            android:gravity="center_vertical">
 
-                            <ImageView
-                                android:layout_weight="1"
-                                android:layout_width="0dp"
-                                android:layout_height="@dimen/_20sdp"
-                                android:src="@drawable/incomedrawer"
-                                />
-                            <TextView
-                                android:layout_weight="5"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:text="Payment Mode"
-                                android:textSize="@dimen/_12sdp"
-                                android:textStyle="bold"
-                                android:textColor="#212A3E"
-                                android:layout_marginLeft="@dimen/_5sdp"
-                                />
 
-                        </LinearLayout>
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:weightSum="6"
-                            android:layout_marginTop="@dimen/_15sdp"
-                            android:gravity="center_vertical">
 
-                            <ImageView
-                                android:layout_weight="1"
-                                android:layout_width="0dp"
-                                android:layout_height="@dimen/_20sdp"
-                                android:src="@drawable/filedrawer"
-                                />
-                            <TextView
-                                android:layout_weight="5"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:text="Exported Report"
-                                android:textSize="@dimen/_12sdp"
-                                android:textStyle="bold"
-                                android:textColor="#212A3E"
-                                android:layout_marginLeft="@dimen/_5sdp"
-                                />
-
-                        </LinearLayout>
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:weightSum="6"
-                            android:layout_marginTop="@dimen/_15sdp"
-                            android:gravity="center_vertical">
-
-                            <ImageView
-                                android:layout_weight="1"
-                                android:layout_width="0dp"
-                                android:layout_height="@dimen/_20sdp"
-                                android:src="@drawable/settingsdrawer"
-                                />
-                            <TextView
-                                android:layout_weight="5"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:text="Settings"
-                                android:textSize="@dimen/_12sdp"
-                                android:textStyle="bold"
-                                android:textColor="#212A3E"
-                                android:layout_marginLeft="@dimen/_5sdp"
-                                />
-
-                        </LinearLayout>
                         <LinearLayout
                             android:id="@+id/btnlogout"
                             android:layout_width="match_parent"
@@ -374,7 +302,7 @@
                                 android:layout_weight="1"
                                 android:layout_width="0dp"
                                 android:layout_height="@dimen/_20sdp"
-                                android:src="@drawable/poweroff"
+                                android:src="@drawable/emaillogout"
                                 />
                             <TextView
                                 android:layout_weight="4"
@@ -400,7 +328,7 @@
                                 android:layout_weight="1"
                                 android:layout_width="0dp"
                                 android:layout_height="@dimen/_20sdp"
-                                android:src="@drawable/googlelogout"
+                                android:src="@drawable/poweroff"
                                 />
                             <TextView
                                 android:layout_weight="4"
@@ -413,6 +341,38 @@
                                 android:layout_marginLeft="@dimen/_5sdp"
                                 />
 
+
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:layout_marginTop="@dimen/_10sdp"
+                            android:gravity="center_horizontal">
+
+                            <TextView
+
+                                android:layout_width="wrap_content"
+                                android:layout_height="24dp"
+                                android:text="Version : "
+                                android:textSize="@dimen/_15sdp"
+                                android:textStyle="bold"
+                                android:fontFamily="@font/aovelsansrounded"
+                                android:textColor="#212A3E"
+                                android:layout_marginLeft="@dimen/_5sdp"
+                                />
+
+                        <TextView
+                            android:id="@+id/txtversion"
+                            android:layout_width="wrap_content"
+                            android:layout_height="24dp"
+                            android:textColor="#245953"
+                            android:text="version"
+                            android:textStyle="bold"
+                            android:fontFamily="@font/aovelsansrounded"
+                            android:textSize="@dimen/_15sdp"/>
                         </LinearLayout>
                         <View
                             android:layout_width="match_parent"
