--- a/app/src/main/res/layout/activity_displayplace.xml
+++ b/app/src/main/res/layout/activity_displayplace.xml
@@ -137,6 +137,18 @@
             <!--                android:layout_height="@dimen/_200sdp"-->
             <!--                tools:context=".activity.DisplayplaceActivity" />-->
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_25sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:fontFamily="@font/aovelsansrounded"
+                android:gravity="center_vertical"
+                android:paddingHorizontal="@dimen/_10sdp"
+                android:text="Hotels Near By"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_15sdp"
+                android:textStyle="bold" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
