--- a/app/src/main/res/layout/fragment_wishlist.xml
+++ b/app/src/main/res/layout/fragment_wishlist.xml
@@ -5,10 +5,24 @@
     android:layout_height="match_parent"
     tools:context=".fragment.WishlistFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:text="Your WishList"
+        android:layout_marginHorizontal="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:textSize="@dimen/_25sdp"
+        android:textStyle="bold"
+        android:fontFamily="@font/aovelsansrounded"
+        android:textColor="@color/black"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/rcvlike"
+        android:layout_marginTop="@dimen/_70sdp">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 </FrameLayout>
