--- a/app/src/main/res/layout/activity_displayplace.xml
+++ b/app/src/main/res/layout/activity_displayplace.xml
@@ -21,12 +21,14 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_47sdp"
-        android:scrollbars="vertical"
 
-        >
+        android:scrollbars="vertical"
+        app:layout_anchor="@+id/scrollView2"
+        app:layout_anchorGravity="center">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -123,11 +125,17 @@
                 android:paddingHorizontal="@dimen/_10sdp"
                 android:textColor="@color/black" />
 
-
-            <FrameLayout
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_250sdp"
-                android:id="@+id/mapframe"/>
+                android:layout_height="@dimen/_200sdp"
+                android:layout_margin="@dimen/_5sdp"
+                app:cardCornerRadius="@dimen/_10sdp">
+
+                <FrameLayout
+                    android:id="@+id/mapframe"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_250sdp" />
+            </androidx.cardview.widget.CardView>
 
 
             <!--            <fragment xmlns:tools="http://schemas.android.com/tools"-->
@@ -150,9 +158,9 @@
                 android:textStyle="bold" />
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rcvhotel"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/rcvhotel">
+                android:layout_height="wrap_content">
 
             </androidx.recyclerview.widget.RecyclerView>
 
@@ -167,6 +175,7 @@
                 android:weightSum="5">
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/txtaddtocart"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
