--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -299,16 +299,16 @@ tools:openDrawer="start"
                                 android:layout_height="@dimen/_20sdp"
                                 android:src="@drawable/emaillogout"
                                 />
+
                             <TextView
-                                android:layout_weight="4"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="Logout from Email"
-                                android:textSize="@dimen/_12sdp"
-                                android:textStyle="bold"
-                                android:textColor="#212A3E"
                                 android:layout_marginLeft="@dimen/_5sdp"
-                                />
+                                android:layout_weight="4"
+                                android:text="Logout from Email"
+                                android:textColor="#212A3E"
+                                android:textSize="@dimen/_12sdp"
+                                android:textStyle="bold" />
 
                         </LinearLayout>
                         <LinearLayout
@@ -325,17 +325,16 @@ tools:openDrawer="start"
                                 android:layout_height="@dimen/_20sdp"
                                 android:src="@drawable/poweroff"
                                 />
+
                             <TextView
-                                android:layout_weight="4"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="Google Logout"
-                                android:textSize="@dimen/_12sdp"
-                                android:textStyle="bold"
-                                android:textColor="#212A3E"
                                 android:layout_marginLeft="@dimen/_5sdp"
-                                />
-
+                                android:layout_weight="4"
+                                android:text="Google Logout"
+                                android:textColor="#212A3E"
+                                android:textSize="@dimen/_12sdp"
+                                android:textStyle="bold" />
 
 
                         </LinearLayout>
@@ -344,20 +343,19 @@ tools:openDrawer="start"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
-                            android:layout_marginTop="@dimen/_10sdp"
+                            android:layout_marginTop="@dimen/_13sdp"
                             android:gravity="center_horizontal">
 
                             <TextView
 
                                 android:layout_width="wrap_content"
                                 android:layout_height="24dp"
-                                android:text="Version : "
-                                android:textSize="@dimen/_15sdp"
-                                android:textStyle="bold"
-                                android:fontFamily="@font/aovelsansrounded"
-                                android:textColor="#212A3E"
                                 android:layout_marginLeft="@dimen/_5sdp"
-                                />
+                                android:fontFamily="@font/aovelsansrounded"
+                                android:text="Version : "
+                                android:textColor="#212A3E"
+                                android:textSize="@dimen/_10sdp"
+                                android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/txtversion"
@@ -367,7 +365,7 @@ tools:openDrawer="start"
                             android:text="version"
                             android:textStyle="bold"
                             android:fontFamily="@font/aovelsansrounded"
-                            android:textSize="@dimen/_15sdp"/>
+                            android:textSize="@dimen/_10sdp"/>
                         </LinearLayout>
                         <View
                             android:layout_width="match_parent"
