--- a/app/src/main/res/layout/activity_displayplace.xml
+++ b/app/src/main/res/layout/activity_displayplace.xml
@@ -187,13 +187,13 @@
                     android:text="ADD TO CART"
                     android:textColor="@color/white" />
 
-                <ImageButton
-                    android:id="@+id/imglike"
-                    android:layout_width="@dimen/_38sdp"
-                    android:layout_height="@dimen/_38sdp"
-                    android:layout_margin="@dimen/_5sdp"
-                    android:layout_weight="2"
-                    android:background="@drawable/fav" />
+<!--                <ImageButton-->
+<!--                    android:id="@+id/imglike"-->
+<!--                    android:layout_width="@dimen/_38sdp"-->
+<!--                    android:layout_height="@dimen/_38sdp"-->
+<!--                    android:layout_margin="@dimen/_5sdp"-->
+<!--                    android:layout_weight="2"-->
+<!--                    android:background="@drawable/fav" />-->
 
             </LinearLayout>
 
