--- a/app/src/main/res/layout/activity_displayplace.xml
+++ b/app/src/main/res/layout/activity_displayplace.xml
@@ -6,19 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".activity.DisplayplaceActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
+
+    <TextView
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/Theme.GatewayGetaways.AppBarOverlay">
+        android:layout_height="?attr/actionBarSize"
+        android:background="#245953"
+        app:popupTheme="@style/Theme.GatewayGetaways.PopupOverlay" />
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="#245953"
-            app:popupTheme="@style/Theme.GatewayGetaways.PopupOverlay" />
-
-    </com.google.android.material.appbar.AppBarLayout>
 
     <ScrollView
         android:id="@+id/scrollView2"
@@ -38,7 +33,7 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_200sdp"
-                android:layout_margin="@dimen/_5sdp"
+                android:layout_margin="@dimen/_15sdp"
                 app:cardCornerRadius="@dimen/_10sdp">
 
                 <ImageView
@@ -52,57 +47,109 @@
                     />
             </androidx.cardview.widget.CardView>
 
-            <TextView
-                android:id="@+id/txtplacename"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_25sdp"
-                android:layout_marginHorizontal="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_5sdp"
-                android:fontFamily="@font/aovelsansrounded"
-                android:gravity="center_vertical"
-                android:paddingHorizontal="@dimen/_10sdp"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_20sdp"
-                android:textStyle="bold" />
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/_15sdp"
+                app:cardCornerRadius="@dimen/_10sdp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_20sdp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingHorizontal="@dimen/_10sdp">
-
-                <TextView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:text="Rateing : "
-                    android:textColor="@color/black"
-                    android:textStyle="bold"
+                    android:orientation="vertical">
 
-                    />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:weightSum="8">
 
-                <TextView
-                    android:id="@+id/txtrateing"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/_30sdp"
+                        <TextView
+                            android:id="@+id/txtplacename"
+                            android:layout_width="wrap_content"
+                            android:layout_height="@dimen/_25sdp"
+                            android:layout_gravity="center_vertical"
+                            android:layout_weight="8"
+                            android:fontFamily="@font/aovelsansrounded"
+                            android:paddingHorizontal="@dimen/_10sdp"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/_20sdp"
+                            android:textStyle="bold" />
 
-                    android:fontFamily="@font/aovelsansrounded"
+                        <LinearLayout
 
-                    android:gravity="center_vertical"
-                    android:paddingHorizontal="@dimen/_10sdp" />
-            </LinearLayout>
+                            android:layout_width="@dimen/_50sdp"
+                            android:layout_height="@dimen/_30sdp"
+                            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/txtfragamount"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/_15sdp"
-                android:layout_marginLeft="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_30sdp"
-                android:gravity="center_vertical"
-                android:paddingHorizontal="@dimen/_10sdp" />
+                            <ImageView
+                                android:layout_width="@dimen/_25sdp"
+                                android:layout_height="@dimen/_25sdp"
+                                android:layout_gravity="center"
+                                android:src="@drawable/ratingstar" />
 
+                            <TextView
+                                android:id="@+id/txtrateing"
+                                android:layout_width="@dimen/_25sdp"
+                                android:layout_height="@dimen/_15sdp"
+                                android:layout_gravity="center_vertical"
+                                android:fontFamily="@font/aovelsansrounded"
+                                android:gravity="center"
+                                android:paddingHorizontal="@dimen/_3sdp"
+                                android:text="sfg"
+                                android:textColor="@color/black" />
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/txtlocation"
+                            android:layout_width="wrap_content"
+                            android:layout_height="@dimen/_15sdp"
+                            android:layout_margin="@dimen/_5sdp"
+                            android:layout_weight="8"
+                            android:fontFamily="@font/aovelsansrounded"
+                            android:paddingHorizontal="@dimen/_10sdp"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/_20sdp"
+                            android:textStyle="bold" />
+
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="@dimen/_5sdp"
+                            app:cardCornerRadius="@dimen/_7sdp">
+
+                            <LinearLayout
+                                android:layout_width="@dimen/_80sdp"
+                                android:layout_height="@dimen/_35sdp"
+                                android:background="#245953"
+                                android:gravity="center">
+
+                                <TextView
+                                    android:id="@+id/txtfragamount"
+                                    android:layout_width="@dimen/_60sdp"
+                                    android:layout_height="@dimen/_25sdp"
+                                    android:fontFamily="@font/aovelsansrounded"
+                                    android:gravity="center"
+                                    android:text="dgsdgzvsf"
+                                    android:textColor="@color/white"
+                                    android:textSize="@dimen/_12sdp"
+                                    android:textStyle="bold"
+                                    tools:ignore="TextSizeCheck" />
+
+                            </LinearLayout>
+                        </androidx.cardview.widget.CardView>
+                    </LinearLayout>
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
 
             <TextView
                 android:layout_width="match_parent"
@@ -110,7 +157,7 @@
                 android:layout_marginBottom="@dimen/_10sdp"
                 android:fontFamily="@font/aovelsansrounded"
                 android:gravity="center_vertical"
-                android:paddingHorizontal="@dimen/_10sdp"
+                android:paddingHorizontal="@dimen/_15sdp"
                 android:text="About the place"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_15sdp"
@@ -167,11 +214,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
+                android:layout_marginVertical="@dimen/_10sdp"
                 android:orientation="horizontal"
+                android:layout_marginHorizontal="@dimen/_35sdp"
                 android:weightSum="5">
 
                 <androidx.appcompat.widget.AppCompatButton
@@ -184,16 +229,17 @@
                     android:layout_weight="5"
                     android:background="@drawable/round_bg_2"
                     android:backgroundTint="#245953"
-                    android:text="ADD TO CART"
+                    android:text="Buy"
                     android:textColor="@color/white" />
 
-<!--                <ImageButton-->
-<!--                    android:id="@+id/imglike"-->
-<!--                    android:layout_width="@dimen/_38sdp"-->
-<!--                    android:layout_height="@dimen/_38sdp"-->
-<!--                    android:layout_margin="@dimen/_5sdp"-->
-<!--                    android:layout_weight="2"-->
-<!--                    android:background="@drawable/fav" />-->
+                <ImageView
+                    android:id="@+id/imgaddtocart"
+                    android:layout_width="@dimen/_38sdp"
+                    android:layout_height="@dimen/_38sdp"
+                    android:layout_margin="@dimen/_5sdp"
+                    android:layout_weight="2"
+                    android:src="@drawable/shoppingcart"
+                   />
 
             </LinearLayout>
 
@@ -202,12 +248,12 @@
     </ScrollView>
 
     <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--        android:id="@+id/fab"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_gravity="bottom|end"-->
-<!--        android:layout_marginEnd="@dimen/fab_margin"-->
-<!--        android:layout_marginBottom="16dp"-->
-<!--        app:srcCompat="@android:drawable/ic_dialog_email" />-->
+    <!--        android:id="@+id/fab"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_gravity="bottom|end"-->
+    <!--        android:layout_marginEnd="@dimen/fab_margin"-->
+    <!--        android:layout_marginBottom="16dp"-->
+    <!--        app:srcCompat="@android:drawable/ic_dialog_email" />-->
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
