--- a/app/src/main/res/layout/activity_displayplace.xml
+++ b/app/src/main/res/layout/activity_displayplace.xml
@@ -151,6 +151,22 @@
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_200sdp"
+                android:layout_marginVertical="@dimen/_5sdp"
+                android:layout_marginHorizontal="@dimen/_12sdp"
+
+                app:cardCornerRadius="@dimen/_10sdp">
+
+                <FrameLayout
+                    android:id="@+id/mapframe"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_250sdp" />
+            </androidx.cardview.widget.CardView>
+
+
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_25sdp"
@@ -172,17 +188,6 @@
                 android:paddingHorizontal="@dimen/_10sdp"
                 android:textColor="@color/black" />
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_200sdp"
-                android:layout_margin="@dimen/_5sdp"
-                app:cardCornerRadius="@dimen/_10sdp">
-
-                <FrameLayout
-                    android:id="@+id/mapframe"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/_250sdp" />
-            </androidx.cardview.widget.CardView>
 
 
             <!--            <fragment xmlns:tools="http://schemas.android.com/tools"-->
