--- a/app/src/main/res/layout/activity_displayplace.xml
+++ b/app/src/main/res/layout/activity_displayplace.xml
@@ -7,12 +7,33 @@
     tools:context=".activity.DisplayplaceActivity">
 
 
-    <TextView
+    <Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="#245953"
-        app:popupTheme="@style/Theme.GatewayGetaways.PopupOverlay" />
+        app:popupTheme="@style/Theme.GatewayGetaways.PopupOverlay">
+
+        <ImageView
+            android:id="@+id/imgdisback"
+            android:layout_width="@dimen/_25sdp"
+            android:layout_height="@dimen/_25sdp"
+            android:src="@drawable/backwhite"
+            />
+
+        <TextView
+            android:id="@+id/txttitlename"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/_25sdp"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="8"
+            android:fontFamily="@font/aovelsansrounded"
+            android:paddingHorizontal="@dimen/_10sdp"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_20sdp"
+            android:textStyle="bold" />
+
+    </Toolbar>
 
 
     <ScrollView
@@ -65,6 +86,7 @@
                         android:weightSum="8">
 
                         <TextView
+                            android:layout_marginTop="@dimen/_5sdp"
                             android:id="@+id/txtplacename"
                             android:layout_width="wrap_content"
                             android:layout_height="@dimen/_25sdp"
@@ -80,7 +102,8 @@
 
                             android:layout_width="@dimen/_50sdp"
                             android:layout_height="@dimen/_30sdp"
-                            android:orientation="horizontal">
+                            android:orientation="horizontal"
+                            android:layout_marginRight="@dimen/_5sdp">
 
                             <ImageView
                                 android:layout_width="@dimen/_25sdp"
@@ -116,8 +139,10 @@
                             android:fontFamily="@font/aovelsansrounded"
                             android:paddingHorizontal="@dimen/_10sdp"
                             android:textColor="@color/black"
-                            android:textSize="@dimen/_20sdp"
-                            android:textStyle="bold" />
+                            android:text="fkjfnbfdjkbdbjkdjdbj"
+                            android:textSize="@dimen/_10sdp"
+                            android:gravity="center_vertical"
+                           />
 
 
                         <androidx.cardview.widget.CardView
@@ -237,14 +262,14 @@
                     android:text="Buy"
                     android:textColor="@color/white" />
 
-                <ImageView
-                    android:id="@+id/imgaddtocart"
-                    android:layout_width="@dimen/_38sdp"
-                    android:layout_height="@dimen/_38sdp"
-                    android:layout_margin="@dimen/_5sdp"
-                    android:layout_weight="2"
-                    android:src="@drawable/shoppingcart"
-                   />
+<!--                <ImageView-->
+<!--                    android:id="@+id/imgaddtocart"-->
+<!--                    android:layout_width="@dimen/_38sdp"-->
+<!--                    android:layout_height="@dimen/_38sdp"-->
+<!--                    android:layout_margin="@dimen/_5sdp"-->
+<!--                    android:layout_weight="2"-->
+<!--                    android:src="@drawable/shoppingcart"-->
+<!--                   />-->
 
             </LinearLayout>
 
